--- a/gode-yi-lai-guan-li-gong-ju-govendor.html
+++ b/gode-yi-lai-guan-li-gong-ju-govendor.html
@@ -228,7 +228,7 @@ pl  Bomber/test
 </article>
 
     <footer>
-<p>&copy;  </p>
+<p>&copy; QianPeili </p>
 <p>    Powered by <a href="http://getpelican.com" target="_blank">Pelican</a> - <a href="https://github.com/alexandrevicenzi/flex" target="_blank">Flex</a> theme by <a href="http://alexandrevicenzi.com" target="_blank">Alexandre Vicenzi</a>
 </p>    </footer>
   </main>
