--- a/archives.html
+++ b/archives.html
@@ -80,6 +80,8 @@
   </header>
   <div>
     <dl>
+      <dt>周六 16 九月 2017</dt>
+      <dd><a href="https://qianpeili.github.io/go-de-requestbody-rewind-gong-neng.html">go 的request.Body rewind 功能</a></dd>
       <dt>周三 16 八月 2017</dt>
       <dd><a href="https://qianpeili.github.io/sheng-ji-gcc-lai-jie-jue-heapdump-build-error.html">升级 GCC 来解决 heapdump build Error</a></dd>
       <dt>周五 28 七月 2017</dt>
