--- a/archives.html
+++ b/archives.html
@@ -80,6 +80,8 @@
   </header>
   <div>
     <dl>
+      <dt>周日 03 十二月 2017</dt>
+      <dd><a href="https://qianpeili.github.io/gode-appendshi-yong-cai-keng-ji-lu.html">Go的append使用踩坑记录</a></dd>
       <dt>周六 04 十一月 2017</dt>
       <dd><a href="https://qianpeili.github.io/da-yin-go-de-stack-trace.html">打印 Go 的Stack Trace</a></dd>
       <dt>周三 01 十一月 2017</dt>
